// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedPrice should render localized currency 1`] = `
<span>
  <span>
    MX$190
  </span>
   *
</span>
`;

exports[`LocalizedPrice should render unlocalized currency 1`] = `
<span>
  10
</span>
`;
